fixed layout bug on mobile

--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -106,10 +106,9 @@
       border: 1px solid $main-dark;
       border-radius: 6px;
       transition: all 0.2s;
-    }
-
-    &:hover a {
-      background-color: $main;
+      &:hover {
+        background-color: $main;
+      }
     }
   }
 
